@@ -1,5 +1,8 @@
-GEPI-1.6.3 -- Procédure d'installation
+GEPI-master -- Procédure d'installation
 ==========================================
+
+Version de développement: NE PAS INSTALLER EN PRODUCTION !
+La branche stable actuelle est la 1.6.3
 
 ****************************************************
 Installation - Etape 0 : téléchargement de l'archive
