@@ -1,5 +1,8 @@
-GEPI-1.6.3 -- Procédure de mise à jour
+GEPI-master -- Procédure de mise à jour
 ==========================================
+
+Version de développement: NE PAS INSTALLER EN PRODUCTION !
+La branche stable actuelle est la 1.6.3
 
 *************
 Mise en garde
